--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ button:active {
   background: #ffda75;
   width: 16em;
   height: 16em;
+  top: 50px;
   overflow: hidden;
   left: calc(50% - 8em);
   border-radius: 50%;
