--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ font-family: 'Reem Kufi', MS Serif;
 	<span style="background:linear-gradient(#ec291a , #ba2115)"></span>
 	<span style="background:linear-gradient(lightgreen, yellow)"></span>
 	<span style="background:linear-gradient(deeppink, blue)"></span>
-  <span style="background:linear-gradient(blue, blue)"></span>
+  <span style="background:linear-gradient(#2FAACE, blue)"></span>
   <span style="background:linear-gradient(lightgreen, crimson);"></span>
 	<span style="background:linear-gradient(purple, crimson);"></span>
   <span style="background:linear-gradient(blueviolet, deeppink)"></span>
